2002-01-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (CheckActionType):
	remove debug code

	* fvwm/menus.c (paint_item):
	* fvwm/misc.c (is_function_allowed):
	* fvwm/move_resize.c (is_move_allowed):
	(is_resize_allowed):
	(is_maximize_allowed):
	* fvwm/decorations.c (check_if_function_allowed):
	combined all these functions into a new one
	use this function everywhere
	use the Fixed... styles to decide if a menu item is greyed or not

2002-01-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleExpose):
	eat up expose events even if the server claims that the expose count is
	zero; fixes a problem with many redraws of windows that are uncovered
	by shading a window above them

2002-01-10  olicha  <olivier.chapuis@free.fr>

	* fvwm/focus.c (DoSetFocus):
	* fvwm/move_resize.c (CMD_Maximize):
	(CMD_Maximize):
	(handle_stick):
	(CMD_ResizeMove):
	(CMD_Resize):
	* fvwm/icons.c (DeIconify):
	(DeIconify):
	(Iconify):
	* fvwm/gnome.c (GNOME_HandlePropRequest):
	* fvwm/ewmh_names.c (EWMH_WMName):
	* fvwm/events.c (HandleFocusIn):
	(HandlePropertyNotify):
	(HandleMapNotify):
	(HandleButtonPress):
	(HandleLeaveNotify):
	(HandleExpose):
	* fvwm/builtins.c (CMD_UpdateDecor):
	(CMD_WindowShade):
	* fvwm/borders.c (draw_clipped_decorations):
	(DrawDecorations):
	(RedrawDecorations):
	* fvwm/borders.h:
	Added a new argument to DrawDecoration similar to draw_window_parts,
	which indicate which part of the decor should be cleared. At present
	time only CLEAR_FRAME is taken in account and this is used in
	ShadeWindow to draw the decoration without flickering. This argument
	may be used in the future to reduce opaque resizing flickering

	* fvwm/builtins.c (CMD_WindowShade):
	Draw the decoration during unshading a window

	* fvwm/menus.c (ParentalMenuRePaint):
	Fixed transparent animated menu again

	* NEWS:
	Some update

2002-01-09  olicha  <olivier.chapuis@free.fr>

	* fvwm/style.c (CMD_Style):
	free all the elements of the ptmpstyle before freeing it
