@@ -1,3 +1,8 @@
+2002-01-16  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/events.c (HandleEnterNotify):
+	Tried to fix focusing problem w/ unclutter.
+
 2002-01-15  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/functions.c (CheckActionType):
